# blaze

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
config/: blaze.json  blaze.lock.json  repositroies.json
doc/: notifywindows.txt  specification.md  symlink.txt
docs/: specification.zh-CN.md  symlink.txt
pkgs/: 7z.json  cmake.json  mingit.json
test/: consolebar.cc  lns.cc  progress.cc  progress2.cc  vtm.cc
test/vtconsole/: console.cc  vtm.cc
tools/: blaze.sln
tools/blaze/: archive.cpp  archive.hpp  blaze.hpp  blaze.json  blaze.manifest  blaze.rc  blaze.vcxproj  blaze.vcxproj.filters  bzip.cpp  console.cpp  console.hpp  download.cpp  download.hpp  driver.cpp  extinstaller.cpp  hash.hpp  install.cpp  msi.cpp  msiinstaller.cpp  package.hpp  packages.cpp  rar.cpp  repositories.cpp  repositories.installed.json  strings.cpp  symlink.cpp  util.cpp  zip.cpp
tools/blaze-archive/: blaze-archive.vcxproj  blaze-archive.vcxproj.filters  driver.cpp
tools/blaze-env/: blaze-env.vcxproj  driver.cpp
tools/blaze-link/: ClassDiagram.cd  blaze-link.cc  blaze-link.h  blaze-link.rc  blaze-link.vcxproj  blaze-link.vcxproj.filters
tools/blaze-mk/: blaze-mk.cc  blaze-mk.manifest  blaze-mk.rc  blaze-mk.vcxproj  blaze-mk.vcxproj.filters  rescle.cc
tools/replace-blink/: replace-blink.cc  replace-blink.sln  replace-blink.vcxproj  replace-blink.vcxproj.filters
tools/unrar/: unrar.vcxproj  unrar.vcxproj.filters
tools/zlib/: zlib.vcxproj  zlib.vcxproj.filters
utilities/: CMakeLists.txt
utilities/bzip2/: makefile.msc
utilities/keccak/: CMakeLists.txt  keccaksum.cc
utilities/reparselib/: reparselib.vcxproj
utilities/rhash/: CMakeLists.txt
